version 2.1:
	- Python interpolation access to text from visual selection via snip.v.
	- Support for transformations of ${VISUAL} texts.
	- New or improved snippets: python, tex, texmath, ruby, rails, html, django
	
version 2.0:
	- Backwards incompatible change: Support for normal mode editing. Snippets
	  are no longer exited when leaving insert mode but only by leaving the
	  text span of the snippets. This allows usage of normal mode commands and
	  autoformatting. It also increases compatibility with other plugins.
	- Backwards incompatible change: Changed glob patterns for snippets to 
	  behave more like Vim *UltiSnips-adding-snippets*
	- Backwards incompatible change: Zero Tabstop is no longer removed in
	  nested snippets
	- Support for ${VISUAL:default text} placeholder. *UltiSnips-visual-placeholder*
	- Improved handling of utf-8 characters in files and snippet definitions.
	- Full support for :py3. UltiSnips now works with python >= 2.6 or >= 3.2.
	- New or improved snippets: python, all

version 1.6:
	- Significant speed improvements and a few bugs fixed.
	- Better handling of non ASCII chars in snippets by assuming UTF-8 encoding
	  when no other information is available.
	- Contributions for UltiSnips are now also accepted on GitHub: https://github.com/SirVer/ultisnips/
	- New or improved snippets: ruby, rails, xhtml

version 1.5:
	- Some critical bug fixes for new vim versions.
	- New or improved snippets: tex, texmath, python, jinja2, go, puppet, xhtml
	- Configuration of search path for snippets *UltiSnips-snippet-search-path* 
	- New parser implementation: A little faster, more flexible and less bugged.

version 1.4:
	- New or improved snippets: php, html, djangohtml, mako, lua 
	- Snippets are now listed alphabetically by their trigger, no longer in
	  order of appearance
	- Snippet files are now automatically reloaded when they change.
	- Support for other directory names for snippets beside
	  "UltiSnips" *UltiSnips-snippet-search-path*