@@ -6,38 +6,71 @@
 ##############
 global !p
 import string, vim
+
+""" Maps a filetype to comment format used for boxes.
+Automatically filled during usage"""
+_commentDict = { }
+
 def _parse_comments(s):
+    """ Parses vim's comments option to extract comment format """
     i = iter(s.split(","))
 
     rv = []
     try:
         while True:
-            n = i.next()
-            if n[0] == 's':
+            # get the flags and text of a comment part
+            flags,text = i.next().split(':', 1)
+
+            if len(flags) == 0:
+                if len(text) == 1:
+                    rv.append((text,text,text, ""))
+            # parse 3-part comment, but ignore those with O flag
+            elif flags[0] == 's' and 'O' not in flags:
                 ctriple = []
                 indent = ""
-                if n[1] in string.digits:
-                    indent = " " * int(n[1])
-                ctriple.append(n.split(":",1)[1])
-                n = i.next()
-                assert(n[0] == 'm')
-                ctriple.append(n.split(":",1)[1])
-                n = i.next()
-                assert(n[0] == 'e')
-                ctriple.append(n.split(":",1)[1])
+
+                if flags[-1] in string.digits:
+                    indent = " " * int(flags[-1])
+                ctriple.append(text)
+
+                flags,text = i.next().split(':', 1)
+                assert(flags[0] == 'm')
+                ctriple.append(text)
+
+                flags,text = i.next().split(':', 1)
+                assert(flags[0] == 'e')
+                ctriple.append(text)
                 ctriple.append(indent)
+
                 rv.append(ctriple)
-            elif n[0] == 'b':
-                cm = n.split(":", 1)[1]
-                if len(cm) == 1:
-                    rv.insert(0, (cm,cm,cm, ""))
+
+            elif flags[0] == 'b':
+                if len(text) == 1:
+                    rv.insert(0, (text,text,text, ""))
+
     except StopIteration:
        return rv
+
+def _get_comment_format():
+    """ Returns a 4-element tuple representing the comment format for
+    the current file. """
+
+    ft = vim.eval("&filetype")
+    # check if the comment dict has the format for the current file
+    if _commentDict.has_key(ft):
+        return _commentDict[ft]
+
+    # otherwise parse vim's comments and add it for later use
+    commentformat = _parse_comments(vim.eval("&comments"))[0]
+    _commentDict[ft] = commentformat
+
+    return commentformat
+
 
 def make_box(twidth, bwidth = None):
    if bwidth is None:
       bwidth = twidth + 2
-   b,m,e,i = _parse_comments(vim.eval("&comments"))[0]
+   b,m,e,i = _get_comment_format()
    sline = b + m + bwidth*m + 2*m
    nspaces = (bwidth - twidth)//2 
    mlines = i + m + " " + " "*nspaces
