@@ -33,11 +33,11 @@ endsnippet
 ################
 # Common stuff #
 ################
-snippet link "Link to something" 
+snippet link "Link to something"
 [${1:${VISUAL:Text}}](${3:http://${2:www.url.com}})$0
 endsnippet
 
-snippet img "Link to something" 
+snippet img "Image"
 ![${1:pic alt}](${2:path}${3/.+/ "/}${3:opt title}${3/.+/"/})$0
 endsnippet
 
